--- a/new1.html
+++ b/new1.html
@@ -2,26 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title><h2>my_html123</h2>
+    <title>hello
     </title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>this is my first project99</h1>
 <div class="parent">
-  <div class="childOne">e
 
-  </div>
-  <div>A </div>
-  <div >B
 
-  </div>
-  <div>
-    C
-  </div>
-  <div>
-    D
-  </div>
+  <div class="childOne">
+    <img src="my_dream_world_by_hevimell.png" alt="notes/my">
+    <p>252525252</p>
+    <p>
+            vijayawada</p></img>
 </div>
+</div>
+
   </body>
-</
-html>
+</html>
