--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <div class="parent">
   <div class="childOne">
     <img src="my_dream_world_by_hevimell.png" alt="notes/my">
-    <p>252525252</p>
+    <p>ph : 9887766554</p>
     <p>
-            vijayawada</p></img>
-      <a href=" ">dwksgh.com</a>
+          add:  kanuru</p>
+        </img><p>  vijayawada</p>
+      <a href=" ">abhignamandava9898@gmail.com</a>
 </div>
 <div class="childTwo">
 
